crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_6.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { $, component$ } from "@qwik.dev/core";
export const sym1 = $((ctx) => console.log("1"));

=== test.tsx ===
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_sym1_XXXXXXXXXXXX");
export const sym1 = /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "sym1_XXXXXXXXXXXX");

=== test.tsx_sym1_XXXXXXXXXXXX.tsx === (ENTRY)
export const sym1_XXXXXXXXXXXX = (ctx) => console.log("1");

/*
{
  "origin": "test.tsx",
  "name": "sym1_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_sym1",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_sym1_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "paramNames": [
    "ctx"
  ]
}
*/

=== DIAGNOSTICS ===

[]
