crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_build_server.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { component$, useStore, isDev, isServer as isServer2 } from "@qwik.dev/core";
import { isServer, isBrowser as isb } from "@qwik.dev/core/build";
import { mongodb } from "mondodb";
import { threejs } from "threejs";

import L from "leaflet";

export const functionThatNeedsWindow = () => {
  if (isb) {
    console.log("l", L);
    console.log("hey");
    window.alert("hey");
  }
};

export const App = component$(() => {
  useMount$(() => {
    if (isServer) {
      console.log("server", mongodb());
    }
    if (isb) {
      console.log("browser", new threejs());
    }
  });
  return (
    <Cmp>
      {isServer2 && <p>server</p>}
      {isb && <p>server</p>}
    </Cmp>
  );
});

=== test.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_XXXXXXXXXXXX");
export const functionThatNeedsWindow = () => {};
export const App = /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "s_XXXXXXXXXXXX"));

=== test.tsx_App_component_XXXXXXXXXXXX.tsx === (ENTRY)
import { mongodb } from "mondodb";
export const s_XXXXXXXXXXXX = () => {
  useMount$(() => {
    console.log("server", mongodb());
  });
  return (
    <Cmp>
      {<p>server</p>}
      {false}
    </Cmp>
  );
};

/*
{
  "origin": "test.tsx",
  "name": "s_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
