crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_capture_imports.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { component$, useStyles$ } from "@qwik.dev/core";
import css1 from "./global.css";
import css2 from "./style.css";
import css3 from "./style.css";

export const App = component$(() => {
  useStyles$(`${css1}${css2}`);
  useStyles$(css3);
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_XXXXXXXXXXXX");
export const App = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App_component_XXXXXXXXXXXX"),
);

=== test.tsx_App_component_XXXXXXXXXXXX.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
import { useStylesQrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_useStyles_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_useStyles_1_XXXXXXXXXXXX");
export const App_component_XXXXXXXXXXXX = () => {
  useStylesQrl(/* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App_component_useStyles_XXXXXXXXXXXX"));
  useStylesQrl(/* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App_component_useStyles_1_XXXXXXXXXXXX"));
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_App_component_useStyles_XXXXXXXXXXXX.js === (ENTRY)
import css1 from "./global.css";
import css2 from "./style.css";
export const App_component_useStyles_XXXXXXXXXXXX = `${css1}${css2}`;

/*
{
  "origin": "test.tsx",
  "name": "App_component_useStyles_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component_useStyles",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_useStyles_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "App_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "useStyles$",
  "captures": false
}
*/

=== test.tsx_App_component_useStyles_1_XXXXXXXXXXXX.js === (ENTRY)
import css3 from "./style.css";
export const App_component_useStyles_1_XXXXXXXXXXXX = css3;

/*
{
  "origin": "test.tsx",
  "name": "App_component_useStyles_1_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component_useStyles_1",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_useStyles_1_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "App_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "useStyles$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
