crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_dead_code.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { component$ } from "@qwik.dev/core";
import { deps } from "deps";

export const Foo = component$(({ foo }) => {
  useMount$(() => {
    if (false) {
      deps();
    }
  });
  return <div />;
});

=== test.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_XXXXXXXXXXXX");
export const Foo = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Foo_component_XXXXXXXXXXXX"),
);

=== test.tsx_Foo_component_XXXXXXXXXXXX.tsx === (ENTRY)
export const Foo_component_XXXXXXXXXXXX = (_rawProps) => {
  useMount$(() => {});
  return <div />;
};

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "paramNames": [
    "_rawProps"
  ]
}
*/

=== DIAGNOSTICS ===

[]
